# vijay-clone-twitter

./: README.md  db.sqlite3  pyproject.toml
django_forum/: settings.py
